@@ -1,4 +1,4 @@
-package com.twitter.finagle.ssl
+package com.twitter.finagle.netty3.ssl
 
 import java.lang.reflect.Method
 import java.util.logging.Logger
