@@ -1,4 +1,4 @@
-package com.twitter.finagle.channel
+package com.twitter.finagle.netty3.channel
 
 import org.scalatest.FunSuite
 import org.scalatest.mock.MockitoSugar
